--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
 @import "tailwindcss";
+
+@theme {
+  --font-display: "Ubuntu", "sans-serif";
+}
+
+body {
+  background-color: oklch(96.8% 0.007 247.896);
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: var(--font-display);
+  width: 100vw;
+  height: 100vh;
+}
